# src/routes/adminRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { createUser, getAllUsers, updateAdminProfile, deleteUser, changeUserPassword } from '../controllers/adminController.js';
+import { createUser, getAllUsers, updateAdminProfile, deleteUser, changeUserPassword, createRombel, getAllRombels } from '../controllers/adminController.js';
 import { authenticate, isAdmin } from '../middlewares/authMiddleware.js';
 
 const router = express.Router();
@@ -16,5 +16,9 @@ router.post('/users', createUser);
 router.get('/users', getAllUsers);
 router.delete('/users/:id', deleteUser);
 router.patch('/users/:id/password', changeUserPassword);
+
+// Rombel management
+router.post('/rombel', createRombel);
+router.get('/rombel', getAllRombels);
 
 export default router;
