# src/routes/guruRoutes.js
@@ -1,6 +1,6 @@
 import express from 'express';
 import { updateProfile, getSiswa, getExamResults, getSubmissionDetail, gradeUraian } from '../controllers/guruController.js';
-import { createUser, deleteUser } from '../controllers/adminController.js';
+import { createUser, deleteUser, createRombel, getAllRombels } from '../controllers/adminController.js';
 import { authenticate, isGuru } from '../middlewares/authMiddleware.js';
 
 const router = express.Router();
@@ -15,6 +15,10 @@ router.get('/exam-results', getExamResults);
 // Siswa Management by Guru
 router.post('/siswa', createUser);
 router.delete('/siswa/:id', deleteUser);
+
+// Rombel Management
+router.post('/rombel', createRombel);
+router.get('/rombel', getAllRombels);
 
 // Manual Grading
 router.get('/submissions/:hasilUjianId', getSubmissionDetail);
